--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^4.6.0",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "marked": "^4.3.0",
     "method-override": "^3.0.0",
     "mongoose": "^7.0.1",
+    "multer": "^1.4.5-lts.1",
     "node-acl": "^0.0.2",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
